# NotAGameEngine

./: .gitmodules  CMakeLists.txt  README.md
cmake/: imguiSetup.cmake
include/: imgui_utilities.hpp  taskManager.hpp
src/: main.cpp  taskManager.cpp
